# lavar_v1

./: .gitignore  .replit  README.md  app.py  lavar_git_access_token.txt  lavar_key_v1  lavar_key_v1.pub  lavar_modular_v1.sh  lavar_modular_v1_2.sh  package-lock.json  package.json  pyproject.toml  replit.nix  requirements.txt  test_mongo.py  test_speech_update.py  vite.config.js
app/: admin.py  db.py
attached_assets/: Pasted--Example-component-to-create-and-modify-a-spreadsheet-import-React-useState-from-react-imp-1747604745840.txt  Pasted--GET-https-66793246-3db9-4ceb-9826-7a03fb6463f5-00-tjsgi59cx-1747698254877.txt  Pasted--INFO-werkzeug-127-0-0-1-25-Apr-2025-16-23-05-POST-api-custom-llm-token-HTTP-1-1-500-Trac-1745598384917.txt  Pasted--attached-assets-image-1747518607440-png-Pasted-build-favicon-ico-index-html-L-1747706656949.txt  Pasted--endpoints-endpoint-admin-static-path-filename-methods-OPTION-1745607019610.txt  Pasted--server-services-google-sheets-ts-Google-Sheets-API-wrapper-import-google-from-googleapis--1747604698332.txt  Pasted--timestamp-1746364526623-type-speech-update-status-started-role-assista-1746376740875.txt  Pasted-Failed-to-fetch-TypeError-Failed-to-fetch-at-getUser-https-66793246-3db9-4ceb-9826-7a03fb646-1746360436563.txt  Pasted-File-home-runner-workspace-pythonlibs-lib-python3-12-site-packages-flask-app-py-line-1536-in--1745084739829.txt  Pasted-INFO-httpx-HTTP-Request-GET-https-goggcasnnxhxbxnbyixy-supabase-co-rest-v1-voice-agent-preference-1745616668619.txt  (+10 more)
client/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  (+3 more)
(+115 files in other folders)
