[tool.poetry]
name = "your-package-name"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
#python = "^3.7"
openai = "^0.27.0"
instructor = "^0.1.0"
pydantic = "^1.10.2"
flask = "^2.2.3"
flask-cors = "^3.0.10"
flask-jwt-extended = "^4.4.0"
initialize = "^0.7.1"
python-dotenv = "^0.21.0"
groq = "0.13.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"